Update etna setup

--- a/box_configuration/anymal/lpc/chrony.conf
+++ b/box_configuration/anymal/lpc/chrony.conf
@@ -5,7 +5,7 @@ allow 192.168.0.149
 allow 10.8.0
 
 ##########################3 ENABLE FOR BOX ##############################################
-#allow 192.168.2.51
+allow 192.168.2.51
 ######################################################################################
 
 # Get the time from the ntp server pool
@@ -37,7 +37,7 @@ maxupdateskew 100
 #rtcsync
 
 # set process priority
-sched_priority 90
+sched_priority 95
 
 # lock chronyd into RAM so that it will never be paged out (for lower and more consistent latency)
 lock_all
@@ -49,7 +49,6 @@ logdir /var/log/chrony
 # set the threshold for the adjustment of the system clock that will generate a syslog message
 logchange 0.5
 
-# Step the system clock
 
 ############################## ENABLE FOR BOX ##################################
 server 192.168.2.51 iburst minpoll -4 maxpoll -4 prefer
@@ -58,11 +57,8 @@ server 192.168.2.51 iburst minpoll -4 maxpoll -4 prefer
 server anymal-d039-lpc noselect
 server anymal-d039-npc noselect
 
+# Step the system clock
 hwtimestamp * minpoll -10
-# makestep 0.1 -1 # This always steps automatically
-
-# This always steps automatically
-# makestep 0.1 -1 
 
 # This does not step automatically
 makestep 1.0 10
